# xuanji

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  xuanji.toml
.github/workflows/: ci.yml
crates/xuanji-agent/: Cargo.toml
crates/xuanji-agent/src/: agent.rs  context.rs  error.rs  lib.rs  prompt.rs  risk.rs  types.rs
crates/xuanji-budget/: Cargo.toml
crates/xuanji-budget/src/: controller.rs  lib.rs  types.rs
crates/xuanji-bus/: Cargo.toml
crates/xuanji-bus/src/: bus.rs  lib.rs  message.rs  state.rs
crates/xuanji-cli/: Cargo.toml
crates/xuanji-cli/src/: config.rs  main.rs
crates/xuanji-cli/src/commands/: agent.rs  daemon.rs  god.rs  init.rs  mcp.rs  memory.rs  mod.rs  role.rs  runtime.rs  swarm.rs  workflow.rs
crates/xuanji-core/: Cargo.toml
crates/xuanji-core/src/: dag.rs  error.rs  lib.rs  parser.rs  scheduler.rs  system_tools.rs  template.rs  types.rs
crates/xuanji-llm/: Cargo.toml
crates/xuanji-llm/src/: anthropic.rs  config.rs  error.rs  lib.rs  openai.rs  protocol.rs  provider.rs  types.rs
crates/xuanji-llm/tests/: anthropic_test.rs  openai_test.rs  protocol_test.rs
crates/xuanji-memory/: Cargo.toml
crates/xuanji-memory/src/: lib.rs  long_term.rs  short_term.rs  types.rs  working.rs
crates/xuanji-memory/tests/: short_term_test.rs
crates/xuanji-plugin/: Cargo.toml
crates/xuanji-plugin/src/: client.rs  error.rs  lib.rs  process.rs  registry.rs  types.rs
crates/xuanji-role/: Cargo.toml
crates/xuanji-role/src/: discover.rs  error.rs  lib.rs  orchestrate.rs  reflect.rs  store.rs  teaching.rs  types.rs
crates/xuanji-trigger/: Cargo.toml
crates/xuanji-trigger/src/: cron_trigger.rs  daemon.rs  error.rs  lib.rs  trigger_impl.rs  types.rs  watcher.rs  webhook.rs
docs/plans/: 2026-06-11-role-self-evolution.md
docs/superpowers/plans/: 2026-06-09-xuanji-mvp.md  2026-06-11-role-execution-wiring.md
docs/superpowers/specs/: 2026-06-09-xuanji-design.md  2026-06-11-role-execution-wiring-design.md  2026-06-11-role-self-evolution-design.md
examples/: auto-build.yaml  build.yaml  deploy.yaml  scheduled-report.yaml  webhook-deploy.yaml
plugins/xuanji-mcp-shell/: Cargo.toml
plugins/xuanji-mcp-shell/src/: main.rs
