[workspace]
resolver = "2"
members = [
    "crates/xuanji-llm",
    "crates/xuanji-plugin",
    "crates/xuanji-agent",
    "crates/xuanji-memory",
    "crates/xuanji-cli",
    "crates/xuanji-core",
    "crates/xuanji-trigger",
    "crates/xuanji-bus",
    "crates/xuanji-budget",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
