[package]
name = "xuanji-agent"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex = "1"
futures = "0.3"
xuanji-llm = { path = "../xuanji-llm" }
xuanji-plugin = { path = "../xuanji-plugin" }
xuanji-memory = { path = "../xuanji-memory" }
