[package]
name = "xuanji-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xuanji"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
which = "7"
xuanji-llm = { path = "../xuanji-llm" }
xuanji-plugin = { path = "../xuanji-plugin" }
xuanji-agent = { path = "../xuanji-agent" }
xuanji-memory = { path = "../xuanji-memory" }
xuanji-core = { path = "../xuanji-core" }
xuanji-trigger = { path = "../xuanji-trigger" }
xuanji-bus = { path = "../xuanji-bus" }
xuanji-budget = { path = "../xuanji-budget" }
xuanji-role = { path = "../xuanji-role" }
libc = "0.2"
termimad = "0.31"
